--- a/Learning_notes/0-神经网络常用知识点.ipynb
+++ b/Learning_notes/0-神经网络常用知识点.ipynb
@@ -62,7 +62,8 @@
    "id": "534603ae",
    "metadata": {},
    "source": [
-    "## tqdm()"
+    "## tqdm()\n",
+    "#### 进度条展示"
    ]
   },
   {
@@ -686,11 +687,87 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "826c8b8a",
+   "metadata": {},
+   "source": [
+    "# numpy transpose 和pytorch transpose, permute\n",
+    "### 重新排列维度；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4f8ffa4",
+   "metadata": {},
+   "source": [
+    "1. numpy transpose功能为重新排列维度；参数为初始维度所在的最终维度，一定要写满所有的维度，和pytorch的permute类似；\n",
+    "2. pytorch的permute和numpy的transpose功能和用法一样，transpose功能为交换两个维度，多次使用可以达到permute的效果，需要两个参数，为需要交换的维度，因此参数顺序不重要；"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "83831541",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 2, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.5862,  1.3680,  0.6195, -0.3363],\n",
+       "         [ 0.0715,  0.1750, -0.4333,  0.5670]],\n",
+       "\n",
+       "        [[ 1.8635, -0.9905, -0.6959, -0.9826],\n",
+       "         [ 0.1972,  0.8338, -0.4737,  1.0901]],\n",
+       "\n",
+       "        [[-0.7835, -0.2804, -0.1764,  1.6528],\n",
+       "         [ 1.0733, -2.0052, -2.1741,  0.3564]]])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "# numpy transpose\n",
+    "x = np.random.rand(2,3,4)\n",
+    "print(x.transpose(2,0,1).shape) # [4,2,3]\n",
+    "\n",
+    "\n",
+    "# pytorch transpose permute\n",
+    "y = torch.randn(2,3,4)  # [2,3,4]\n",
+    "\n",
+    "# 对于transpose\n",
+    "y.transpose(0,1)    # [3,2,4]\n",
+    "# y.transpose(0,2,1)  # 报错，操作不了多维\n",
+    "\n",
+    "# 对于permute\n",
+    "y.permute(1,0,2)  # [3,2,4],必须写满所有的维度才不报错\n",
+    "# y.permute(0,1)    # 报错,number of dims don't match in permute\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3c95b69",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.0 ('IMX500')",
    "language": "python",
    "name": "python3"
   },
@@ -705,6 +782,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a6898330a772008c0efb32b6e51c3fb8f855e3228c7dbee5aae70bc6dd7211e8"
+   }
   }
  },
  "nbformat": 4,
