--- a/Learning_notes/2-FCOS网络结构.ipynb
+++ b/Learning_notes/2-FCOS网络结构.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +47,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### nn.parameter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以把这个函数理解为类型转换函数，将一个不可训练的数据类型Tensor转换成可以训练的数据类型parameter,并将这个parameter绑定到这个module里面；"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ScaleExp(nn.Module):\n",
+    "    \"\"\"\n",
+    "    定义一个指数缩放模块\n",
+    "    \"\"\"\n",
+    "    def __init__(self, init_value=1.0):\n",
+    "        super(ScaleExp, self).__init__()\n",
+    "        self.scale = nn.Parameter(torch.tensor([init_value], dtype=torch.float32))  # nn.parameter 将一个不可训练的tensor转换乘可以训练的类型parameter,并将这个parameter绑定到这个module里面； \n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return torch.exp(x * self.scale)  # 乘一个可以训练的缩放因子 scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +123,110 @@
     "        \n",
     "        # 2 ========================网络输出=====================================\n",
     "        # 2.1 网络分类路径输出\n",
+    "        self.cls_logits = nn.Conv2d(in_channel, class_num, kernel_size=3, padding=1)\n",
+    "        # 2.2 网络回归路径输出\n",
+    "        self.reg_pred = nn.Conv2d(in_channel, 4, kernel_size=3, padding=1)\n",
+    "        # 2.3 目标中心输出\n",
+    "        self.cnt_logits = nn.Conv2d(in_channel, 1, kernel_size=3, padding=1)\n",
+    "        # =======================================================================\n",
     "        \n",
+    "        # 3. 网络参数初始化\n",
+    "        self.apply(self.init_conv_RandomNormal)\n",
+    "        nn.init.constant_(self.cls_logits.bias, - math.log((1-prior)/prior))\n",
     "        \n",
+    "        # 4. 实例化五个缩放层\n",
+    "        self.scale_exp = nn.ModuleList([ScaleExp(1.0) for _ in range(5)])        \n",
     "        \n",
-    "        \n",
+    "    def init_conv_RandomNormal(self, module, std=0.01):\n",
+    "        if isinstance(module, nn.Conv2d):\n",
+    "            nn.init.normal_(module.weight, std=std)\n",
+    "            if module.bias is not None:\n",
+    "                nn.init.constant_(module.bias, 0)\n",
+    "                \n",
+    "    def forward(self, inputs):\n",
+    "        \"\"\"_summary_\n",
+    "\n",
+    "        Args:\n",
+    "            inputs ([[p3~p7]): _description_\n",
+    "        \"\"\"\n",
+    "        cls_logits = []\n",
+    "        cnt_logits = []\n",
+    "        reg_preds = []\n",
+    "        for index, P in enumerate(inputs):\n",
+    "            # 所有的P层都经过cls_conv(),所以这里，模块cls_conv()的参数是共享的。\n",
+    "            cls_conv_out = self.cls_conv(P)\n",
+    "            # 所有的p层都经过reg_conv(),所以这里，模块reg_conv()的参数是共享的。\n",
+    "            reg_conv_out = self.reg_conv(P)\n",
+    "            \n",
+    "            cls_logits.append(self.cls_logits(cls_conv_out))\n",
+    "            \n",
+    "            if not self.cnt_on_reg:  # 中心回归放在哪一个分支上，是cls_conv_out, 还是reg_conv_out分支\n",
+    "                cnt_logits.append(self.cnt_logits(cls_conv_out))\n",
+    "            else:\n",
+    "                cnt_logits.append(self.cnt_logits(reg_conv_out))  # 中心回归默认放在reg_conv_out分支\n",
+    "            \n",
+    "            reg_preds.append(self.scale_exp[index](self.reg_pred(reg_conv_out)))\n",
+    "        return cls_logits, cnt_logits, reg_preds  # 每一个返回的list都有5个分量，对应P3~P7的卷积输出；\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Bypasses of the detection head;\n",
+      "Sequential(\n",
+      "  (0): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (1): ReLU(inplace=True)\n",
+      "  (2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (3): ReLU(inplace=True)\n",
+      "  (4): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (5): ReLU(inplace=True)\n",
+      "  (6): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (7): ReLU(inplace=True)\n",
+      ") \n",
+      "\n",
+      "Sequential(\n",
+      "  (0): GroupNorm(32, 256, eps=1e-05, affine=True)\n",
+      "  (1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (2): GroupNorm(32, 256, eps=1e-05, affine=True)\n",
+      "  (3): ReLU(inplace=True)\n",
+      "  (4): GroupNorm(32, 256, eps=1e-05, affine=True)\n",
+      "  (5): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (6): GroupNorm(32, 256, eps=1e-05, affine=True)\n",
+      "  (7): ReLU(inplace=True)\n",
+      "  (8): GroupNorm(32, 256, eps=1e-05, affine=True)\n",
+      "  (9): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (10): GroupNorm(32, 256, eps=1e-05, affine=True)\n",
+      "  (11): ReLU(inplace=True)\n",
+      "  (12): GroupNorm(32, 256, eps=1e-05, affine=True)\n",
+      "  (13): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (14): GroupNorm(32, 256, eps=1e-05, affine=True)\n",
+      "  (15): ReLU(inplace=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "head = ClsCntRegHead(256, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
