add new learning notes

--- a/Learning_notes/0-神经网络常用知识点.ipynb
+++ b/Learning_notes/0-神经网络常用知识点.ipynb
@@ -762,6 +762,74 @@
    "cell_type": "markdown",
    "id": "f3c95b69",
    "metadata": {},
+   "source": [
+    "# stack()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "396fdc08",
+   "metadata": {},
+   "source": [
+    "##### 官方解释：沿着一个新维度对输入张量序列进行连接，序列中所有的张量都应该为相同形状\n",
+    "##### 浅显说法：把多个2维的张量凑成一个3维度的张量，多个3维的凑成一个4维的张量，以此类推，也就是在增加心得维度进行堆叠"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "848c08f9",
+   "metadata": {},
+   "source": [
+    "outputs = torch.stack(inputs, dim=?) --> tensor\n",
+    "参数：\n",
+    "  * inputs: 待连接的张量序列；\n",
+    "  * dim: 新的维度，必须在0到len(outputs)之间；"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fc4ad5d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1,  2],\n",
+      "        [ 2, 12],\n",
+      "        [ 4, 23],\n",
+      "        [ 5,  4],\n",
+      "        [ 6,  2]])\n",
+      "tensor([[ 3,  4],\n",
+      "        [ 4, 14],\n",
+      "        [ 6, 25],\n",
+      "        [ 7,  6],\n",
+      "        [ 8,  4]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "shifts_x = torch.arange(0, 16, 4, dtype=torch.float32)\n",
+    "shifts_y = torch.arange(0, 16, 4, dtype=torch.float32)\n",
+    "shift_y, shift_x = torch.meshgrid(shifts_y, shifts_x)\n",
+    "shift_x = torch.reshape(shift_x, [-1])\n",
+    "shift_y = torch.reshape(shift_y, [-1])\n",
+    "coords = torch.stack([shift_x, shift_y], -1) + (4 // 2)  # 中心点偏置\n",
+    "\n",
+    "a =torch.asarray([1, 2, 4, 5, 6]) \n",
+    "b =torch.asarray([2, 12, 23, 4, 2]) \n",
+    "coords = torch.stack([a, b], -1) \n",
+    "print(coords)\n",
+    "print(coords+(4//2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb731dab",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
