learning note update

--- a/Learning_notes/register机制学习/test1_over_all.ipynb
+++ b/Learning_notes/register机制学习/test1_over_all.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,59 @@
     "            return wrapper\n",
     "    \n",
     "    def get(self, name):\n",
-    "        return self._name_method_map[name]"
+    "        return self._name_method_map[name]\n",
+    "\n",
+    "register_obj = RegisterMachine(\"register\")    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, Peter!\n"
+     ]
+    }
+   ],
+   "source": [
+    "@register_obj.register()\n",
+    "def say_hello_with(name):\n",
+    "    print(\"hello, {person}!\".format(person=name))\n",
+    "    \n",
+    "register_obj.get(\"say_hello_with\")(\"Peter\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, John!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def say_hi_with(name):\n",
+    "    print(\"Hi, {person}!\".format(person=name))\n",
+    "    \n",
+    "register_obj.register(say_hi_with)\n",
+    "register_obj.get(\"say_hi_with\")(\"John\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
